change the accent color for the settings activities

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,7 @@
     <style name="AppTheme.NoColors" parent="@style/Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/materialGrey</item>
         <item name="colorPrimaryDark">@color/materialGreyDark</item>
-        <item name="colorAccent">@color/materialGrey</item>
+        <item name="colorAccent">@android:color/black</item>
         <item name="android:windowBackground">@color/background</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:actionOverflowButtonStyle">@style/Overflow</item>
