remove feature flag for the article enhancer

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,7 @@
         <text>Web article and YouTube video previews in the message list</text>
         <text>Fast and beautiful, readability style, web article browser!</text>
         <text>Fix dual SIM not working when you don't have an account set up</text>
+        <text>Fixes for vibration on some devices</text>
     </version>
 
     <version
