--- a/app/src/main/res/layout/preference_notifications.xml
+++ b/app/src/main/res/layout/preference_notifications.xml
@@ -5,80 +5,121 @@
     android:padding="16dp">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/ringtone"
-            android:layout_width="100dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless" >
+            android:layout_marginTop="12dp"
+            android:gravity="center">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/ringtone"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_ringtone"
-                android:tint="@color/subscriptionPrimaryText"
-                android:layout_marginBottom="8dp"/>
+                android:background="?selectableItemBackgroundBorderless" >
 
-            <TextView
-                android:layout_gravity="center"
-                android:textColor="@color/subscriptionPrimaryText"
-                android:text="@string/ringtone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ringtone"
+                    android:tint="@color/subscriptionPrimaryText"
+                    android:layout_marginBottom="8dp"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:textColor="@color/subscriptionPrimaryText"
+                    android:text="@string/ringtone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/vibrate"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:background="?selectableItemBackgroundBorderless" >
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_vibrate"
+                    android:tint="@color/subscriptionPrimaryText"
+                    android:layout_marginBottom="8dp"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:textColor="@color/subscriptionPrimaryText"
+                    android:text="@string/vibrate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/vibrate"
-            android:layout_width="100dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless" >
+            android:layout_marginTop="24dp"
+            android:gravity="center">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/repeat"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_vibrate"
-                android:tint="@color/subscriptionPrimaryText"
-                android:layout_marginBottom="8dp"/>
+                android:background="?selectableItemBackgroundBorderless" >
 
-            <TextView
-                android:layout_gravity="center"
-                android:textColor="@color/subscriptionPrimaryText"
-                android:text="@string/vibrate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_timer"
+                    android:tint="@color/subscriptionPrimaryText"
+                    android:layout_marginBottom="8dp"/>
 
-        </LinearLayout>
+                <TextView
+                    android:layout_gravity="center"
+                    android:textColor="@color/subscriptionPrimaryText"
+                    android:text="@string/repeat_interval"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/repeat"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless" >
+            </LinearLayout>
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/wake_screen"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_timer"
-                android:tint="@color/subscriptionPrimaryText"
-                android:layout_marginBottom="8dp"/>
+                android:background="?selectableItemBackgroundBorderless" >
 
-            <TextView
-                android:layout_gravity="center"
-                android:textColor="@color/subscriptionPrimaryText"
-                android:text="@string/repeat_interval"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_wake_screen"
+                    android:tint="@color/subscriptionPrimaryText"
+                    android:layout_marginBottom="8dp"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:textColor="@color/subscriptionPrimaryText"
+                    android:text="@string/wake_screen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
