--- a/api_implementation/src/main/res/values-uk/api_string.xml
+++ b/api_implementation/src/main/res/values-uk/api_string.xml
@@ -31,7 +31,7 @@
     <string name="api_error">Сталася помилка під час операції</string>
     <string name="api_device_error">При додаванні цього пристрою сталася помилка. Повторіть!</string>
     <string name="api_add_second_primary_device">Схоже у Вас вже є основний пристрій 
-(%1$s) для вашого облікового запису, і тільки один дозволяється! 
+(%1$s) для вашого облікового запису, і лише один дозволяється! 
 Ви хочете видалити поточний основний пристрій і встановити цей в якості нового основного?</string>
     <string name="api_yes">Так</string>
     <string name="api_no">Ні</string>
