three second delayed sending

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -117,6 +117,7 @@
 
     <string-array name="delayed_sending">
         <item>@string/off</item>
+        <item>@string/three_seconds</item>
         <item>@string/five_seconds</item>
         <item>@string/ten_seconds</item>
         <item>@string/fifteen_seconds</item>
@@ -126,6 +127,7 @@
 
     <string-array name="delayed_sending_values">
         <item>off</item>
+        <item>three_seconds</item>
         <item>five_seconds</item>
         <item>ten_seconds</item>
         <item>fifteen_seconds</item>
