Update the changelog

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -23,6 +23,7 @@
         <text>New for web: use the global color theme, from the app!</text>
         <text>New for web: use the "rounder bubbles" option, from the app!</text>
         <text>New for web: settings section in the navigation drawer</text>
+        <text>New for web: create new scheduled messages</text>
         <text>New for Android: tons of bug fixes that had been reported</text>
     </version>
   
