--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -24,6 +24,7 @@
         <text>New for web: use the "rounder bubbles" option, from the app!</text>
         <text>New for web: settings section in the navigation drawer</text>
         <text>New for web: create new scheduled messages</text>
+        <text>Improved on web: image support in conversations</text>
         <text>New for Android: tons of bug fixes that had been reported</text>
     </version>
   
