--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -85,6 +85,8 @@
         <item>@string/vibrate_three_short</item>
         <item>@string/vibrate_one_short_one_long</item>
         <item>@string/vibrate_one_long_one_short</item>
+        <item>@string/vibrate_one_short</item>
+        <item>@string/vibrate_one_long</item>
     </string-array>
 
     <string-array name="vibrate_values">
@@ -95,6 +97,8 @@
         <item>vibrate_three_short</item>
         <item>vibrate_one_short_one_long</item>
         <item>vibrate_one_long_one_short</item>
+        <item>vibrate_one_short</item>
+        <item>vibrate_one_long</item>
     </string-array>
 
     <string-array name="repeat">
