--- a/app/src/main/res/xml/settings_global.xml
+++ b/app/src/main/res/xml/settings_global.xml
@@ -65,15 +65,9 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="@string/pref_advanced_category"
+    <!-- <PreferenceCategory android:key="@string/pref_advanced_category"
         android:title="@string/advanced">
 
-        <SwitchPreference
-            android:key="@string/pref_convert_to_mms"
-            android:title="@string/send_as_mms"
-            android:summary="@string/send_as_mms_summary"
-            android:defaultValue="true" />
-
-    </PreferenceCategory>
+    </PreferenceCategory> -->
 
 </PreferenceScreen>
