--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -175,6 +175,7 @@
         <item>500 KB</item>
         <item>700 KB</item>
         <item>1 MB</item>
+        <item>5 MB</item>
     </string-array>
 
     <string-array name="mms_size_values">
@@ -183,6 +184,7 @@
         <item>500_kb</item>
         <item>700_kb</item>
         <item>1_mb</item>
+        <item>5_mb</item>
     </string-array>
 
 </resources>
