--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="1.13.2"
+        description="December 28th, 2016">
+        <text>Fix some issues around keeping database up to date, after using other apps.</text>
+    </version>
+
+    <version
         name="1.13.1"
         description="December 26th, 2016">
         <text>"MMS Configuration" options in the "Global Settings" overflow menu</text>
